<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activities.HomePage.DashboardActivity"
    tools:showIn="@layout/activity_dashboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/loadingShimmer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:visibility="gone">

            <include layout="@layout/shimmer_view_design" />
        </com.facebook.shimmer.ShimmerFrameLayout>

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/covit_19_info"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:gravity="top"
                    android:text="Worldwide"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    tools:ignore="HardcodedText,RelativeOverlap,RtlCompat" />
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="5dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/virus"
                        tools:ignore="ContentDescription" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/worldCases"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cases"
                            android:textColor="@android:color/holo_green_dark"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/worldCasesCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/cases"
                            android:textColor="@android:color/black"
                            android:textSize="22sp"
                            android:textStyle="normal" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="5dp"
                android:paddingBottom="10dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="2dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/recovered"
                            tools:ignore="ContentDescription" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/worldRecover"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/recover"
                                android:textColor="@color/colorPrimary"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/worldRecoverCount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/cases"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"
                                android:textStyle="normal" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="2dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/newWorldRecover"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/new_recovered"
                            android:textColor="@color/colorPrimary"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/newWorldRecoverCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/cases"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            android:textStyle="normal" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="2dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/dead"
                            tools:ignore="ContentDescription" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/worldDeaths"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/deaths"
                                android:textColor="@android:color/holo_red_dark"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/worldDeathsCount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/cases"
                                android:textColor="@android:color/black"
                                android:textSize="16sp"
                                android:textStyle="normal" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="2dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/newWorldDeaths"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/new_deaths"
                            android:textColor="@android:color/holo_red_dark"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/newWorldDeathsCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/cases"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            android:textStyle="normal" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <include layout="@layout/selected_country_details" />
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>